--- a/site/index.html
+++ b/site/index.html
@@ -1,13 +1,160 @@
 <!DOCTYPE html>
 
-<html> <!this is a starting tag>
-<!all html tags go between this>
-	
+<html> <!--this is a starting tag-->
+<!--all html tags go between this-->
 	<head>
-		<title>Qiqi's Website</title>
+		<title>HTML Cheat Sheet</title>
 	</head>
 	<body>
-		Hello World!
-	</body>
+		<a href="blog.html">Go to blog</a>
+		<hr>
+		<!-- Heading -->
+		<h1>Heading One</h1>
+		<h2>Heading Two</h2>
+		<h3>Heading Three</h3>
+		<h4>Heading Four</h4>
+		<h5>Heading Five</h5>
+		<h6>Heading Six</h6>
 
-</html> <!this is an ending tag>
+		<!-- Paragraph -->
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed <a href="http://google.com" target="_blank">do eiusmod</a>
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		</p>
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor <strong>incididunt ut labore</strong> et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud <em>exercitation ullamco</em> laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		</p>
+
+		<!-- lists -->
+		<ul>
+			<li>list item 1</li>
+			<li>list item 2</li>
+			<li>list item 3</li>
+			<li>list item 4</li>
+		</ul>
+
+		<ol>
+			<li>list item 1</li>
+			<li>list item 2</li>
+			<li>list item 3</li>
+			<li>list item 4</li>
+		</ol>
+
+		<!-- Table -->
+		<table>
+			<thead>
+				<tr>
+					<th>Name</th>
+					<th>Email</th>
+					<th>Age</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>Keikei So</td>
+					<td>calliasu2018@gmail.com</td>
+					<td>19</td>
+				</tr>
+				<tr>
+					<td>Keikei So</td>
+					<td>calliasu2018@gmail.com</td>
+					<td>19</td>
+				</tr>
+				<tr>
+					<td>Keikei So</td>
+					<td>calliasu2018@gmail.com</td>
+					<td>19</td>
+				</tr>
+			</tbody>
+		</table>
+
+		<br> <!-- line break -->
+		<hr> <!-- horizontal line -->
+		<br>
+
+		<!-- Forms -->
+		<form action="process.php" method="POST">
+			<div>
+				<label>First Name</label>
+				<input type="text" name="firstName"
+				placeholder="Enter your first name">
+			</div>
+			<br>
+			<div>
+				<label>Last Name</label>
+				<input type="text" name="lastName"
+				placeholder="Enter your last name">
+			</div>
+			<br>
+			<div>
+				<label>Email</label>
+				<input type="email" name="email">
+			</div>
+			<br>
+			<div>
+				<label>Message</label>
+				<textarea name="message"></textarea>
+			</div>
+			<br>
+			<div>
+				<label>Gender</label>
+				<select name="gender">
+					<option value="male">Male</option>
+					<option value="female">Female</option>
+					<option value="other">Other</option>
+				</select>
+			</div>
+			<br>
+			<div>
+				<label>Age:</label>
+				<input type="number" name="age" value="30">
+			</div>
+			<br>
+			<div>
+				<label>Birthday</label>
+				<input type="date" name="birthday">
+			</div>
+			<br>
+			<input type="submit" name="submit" value="Submit">
+		</form>
+
+		<!-- Button -->
+		<button click="someFunction">Click Me</button>
+		<br>
+
+		<!-- Image -->
+		<a href="images/llama.png">
+		<img src="images/llama.png" alt="My sample image"
+		width="100">
+		</a>
+
+		<!-- quotation -->
+		<blockquote cite="http://travasymedia.com">
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		</blockquote>
+
+		<p>
+			The <abbr title="World Wide Web">WWW</abbr> is awesome
+		</p>
+
+		<p>
+			<cite>The HTML crash course</cite>
+		</p>
+
+		<div style="margin-top:500px"></div>
+	</body>
+</html> <!--this is an ending tag-->
